feat(customer): add-customer-&-get-by-id
